feat: implemented new grant endpoints
